# Thinkmay-worker

./: CMakeLists.txt  README.md  README.rst  build.bat  remote-token
agent/: CMakeLists.txt
agent/include/: agent-child-process.h  agent-device.h  agent-ipc.h  agent-message.h  agent-object.h  agent-server.h  agent-session-initializer.h  agent-shell-session.h  agent-socket.h  agent-type.h
agent/source/: agent-child-process.c  agent-device.c  agent-message.c  agent-object.c  agent-server.c  agent-session-initializer.c  agent-shell-session.c  agent-socket.c  main.c  program.c  remote-token
cluster/: docker-compose.yaml
file-transfer-service/: CMakeLists.txt
file-transfer-service/include/: file-transfer-data-channel.h  file-transfer-signalling.h  file-transfer-type.h  file-transfer-webrtcbin.h  file-transfer.h
file-transfer-service/source/: file-transfer-datachannel.c  file-transfer-signalling.c  file-transfer-webrtcbin.c  file_transfer.c  program.c
remote-app/: CMakeLists.txt
remote-app/include/: remote-app-data-channel.h  remote-app-input.h  remote-app-message.h  remote-app-pipeline.h  remote-app-remote-config.h  remote-app-signalling.h  remote-app-type.h  remote-app.h
remote-app/source/: program.c  remote-app-data-channel.c  remote-app-input.c  remote-app-message.c  remote-app-pipeline.c  remote-app-remote-config.c  remote-app-signalling.c  remote-app.c
session-core/adaptive-bitrate-algorithm/: high-const.c  high-const.h  low-const.c  low-const.h  medium-const.c  medium-const.h  ultra-high-const.c  ultra-high-const.h  ultra-low-const.c  ultra-low-const.h  very-high-const.c  very-high-const.h
session-core/include/: session-core-data-channel.h  session-core-ipc.h  session-core-message.h  session-core-pipeline.h  session-core-remote-config.h  session-core-signalling.h  session-core-type.h  session-core.h
session-core/source/: main.c  program.c  session-core-data-channel.c  session-core-ipc.c  session-core-message.c  session-core-pipeline.c  session-core-remote-config.c  session-core-signalling.c  session-core.c
shared-items/include/: child-process-constant.h  error-code.h  exit-code.h  (+11 more)
(+43 files in other folders)
